[gd_scene load_steps=11 format=2]

[ext_resource path="res://title_screen/fonts/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://title_screen/buttons/SettingsButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://title_screen/buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/buttons/LoadGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://mask.jpeg" type="Texture" id=5]
[ext_resource path="res://ComicSans.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fade_In/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://title_screen/buttons/title_screen.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 6 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 61.7542
margin_right = 1484.0
margin_bottom = 1285.75
rect_scale = Vector2( 0.764378, 0.498238 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="CenterContainer" parent="Menu"]
margin_right = 1364.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Menu/Logo"]
margin_left = 298.0
margin_right = 1065.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
text = "2020: The Game"

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 145.0
margin_right = 1364.0
margin_bottom = 1145.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 360.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGame" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 339.0
margin_right = 360.0
margin_bottom = 399.0
rect_min_size = Vector2( 360, 60 )
script = null

[node name="LoadGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 419.0
margin_right = 360.0
margin_bottom = 479.0
rect_min_size = Vector2( 360, 60 )
script = null

[node name="SettingsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 499.0
margin_right = 360.0
margin_bottom = 570.0
custom_fonts/font = ExtResource( 1 )
script = null

[node name="QuitButton" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 590.0
margin_right = 360.0
margin_bottom = 661.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 364.0
margin_right = 1364.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_right = 1000.0
margin_bottom = 1000.0
texture = ExtResource( 5 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 1149.0
margin_right = 1364.0
margin_bottom = 1224.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Version 1.0.0
Team Profanity Studios"

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
